test/classes/initializers/error-parenthesless-initializer.good
error-parenthesless-initializer.chpl:3: error: an initializer cannot be declared without parentheses
